# Xway

./: .dockerignore  .gitignore  AUTH_CONFIG_ANALYSIS.md  AUTH_EARLY_EOF_ANALYSIS.md  BINARY_RELEASE_GUIDE.md  CONNECTION_ANALYSIS.md  CONNECTION_COUNTER_ANALYSIS.md  CONNECTION_FIX_SUMMARY.md  CORRECT_TEST_METHOD.md  CROSS_COMPILE_ISSUES.md  CRYPTO_TEST_REPORT.md  Cargo.toml  DEPLOYMENT.md  DOCKERFILE_ANALYSIS.md  DOCKERFILE_EARLY_EOF_ANALYSIS.md  DOCKERFILE_UPDATE.md  DOKPLOY_DEPLOY.md  DUAL_GUI_FIX.md  Dockerfile  Dockerfile.multi-stage  E2E_TEST_REPORT.md  EARLY_EOF_ROOT_CAUSE.md  ERROR_DISPLAY_FIX.md  ERROR_DISPLAY_FIXED.md  FIRST_BYTE_AUTH_COMPLETE.md  GFW_EVASION_SUMMARY.md  GITHUB_ACTIONS_CHECKLIST.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  KING_ANALYSIS.md  KING_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS.md  PROGRESS.md  PROXY_FIX_SUMMARY.md  PUSH_GUIDE.md  QUICKSTART_BINARY_RELEASE.md  QUICK_REFERENCE.md  QUICK_START.md  (+12 more)
.github/workflows/: release.yml
client/: Cargo.toml
client-core/: Cargo.toml  test_bind_behavior.rs  test_bind_simple.sh
client-core/src/: config.rs  lib.rs  proxy.rs  state.rs
client-core/src/platform/: android.rs  ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
client-gui/: README.md  USAGE.md  fix_dock.sh  package.json
client-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client-gui/src-tauri/capabilities/: default.json
client-gui/src-tauri/icons/: README.md  convert-icons.sh  convert-svg.cjs  convert-svg.js  icon.icns
client-gui/src-tauri/src/: lib.rs  main.rs
client-gui/ui/: package.json  pnpm-lock.yaml
client-gui/ui/src/: App.jsx  App.jsx.broken  index.css
client/config/: client.toml
client/src/: client.rs  config.rs  main.rs
config/: client.toml
examples/: test_bind.rs  test_bind_behavior.rs
scripts/: build-in-docker.sh  build-release.sh  release.sh
server/: Cargo.toml
server/config/: server.toml
server/src/: config.rs  defense.rs  main.rs  server.rs
shared/: Cargo.toml  test_perf.rs  test_perf_bin.rs
shared/benches/: king_benchmark.rs
shared/src/: auth.rs  auth_config.rs  crypto.rs  error.rs  king_maps.rs  lib.rs  popcount.rs  protocol.rs
shared/tests/: auth_popcount_fix_test.rs  debug_test.rs  encode_decode_test.rs  full_flow_test.rs  integration_test.rs  simple_test.rs  verbose_test.rs
tests/: basic_test.rs
