[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 网络
bytes = { workspace = true }

# 加密
aes-gcm = { workspace = true }
rand = { workspace = true }

# 工具
regex = { workspace = true }
url = { workspace = true }
